Updated stud fee calculation button to use correct image url (#17)
* Fixed calculate image not showing in button

* Fixed vulneraility in minimist@1.2.5

* Updated version number to 3.4.2

--- a/scripts/content/breeding/manage-stallions.css
+++ b/scripts/content/breeding/manage-stallions.css
@@ -14,12 +14,12 @@
     height: calc(2.25rem + 2px);
     object-fit: contain;
     object-position: center center;
+    padding: 0;
     transition: border-color 150ms ease-in-out, box-shadow 150ms ease-in-out;
     width: calc(2.25rem + 2px);
 }
 
-.hn-plus-calculate-button::before {
-    content: url('chrome-extension://aonknefdnheomhlfcnjdicnkbfdakcdo/public/icons/calculate.svg');
+.hn-plus-calculate-button img {
     height: 100%;
     max-width: 100%;
 }
